Recipe search result test

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -283,8 +283,8 @@ ul li:hover ul.dropdown-menu .menu-hr {
 .card {
   border-radius: 25px;
   max-width: 225px;
-  margin-right: 10px;
-  margin-bottom: 20px;
+  margin-left: 5px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
