--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -2,12 +2,40 @@
 <h1 class="hidden">All Recipes</h1>
 <!-- Include carousel -->
 {% include 'components/carousel/carousel.html' %}
-<div class="container search-container">
+<div class="search-container">
     <div class="search-box"></div>
-    <div class="card-results">
-        {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {%
-        include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %} {% include 'components/cards/recipe-card.html' %}
-    </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 card">
+            {% include 'components/cards/recipe-card.html' %}
+        </div>
 </div>
-
 {% endblock %}
