--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -1,8 +1,8 @@
 .card {
     border-radius: 25px;
     max-width: 225px;
-    margin-right: 10px;
-    margin-bottom: 20px; 
+    margin-left: 5px;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
