--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -4,37 +4,7 @@
 {% include 'components/carousel/carousel.html' %}
 <div class="search-container">
     <div class="search-box"></div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
-            {% include 'components/cards/recipe-card.html' %}
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 card">
+        <div class="col-md-3 col-sm-4 col-xs-6 card-recipes">
             {% include 'components/cards/recipe-card.html' %}
         </div>
 </div>
