--- a/scss/components/cards/recipe-card.scss
+++ b/scss/components/cards/recipe-card.scss
@@ -14,6 +14,7 @@
     border: solid $border transparent;
     /* !importanté */
     border-radius: 1.5em;
+    padding: 0 !important;
 
     &:before {
         content: '';
@@ -34,7 +35,6 @@
     width: 100%;
     height: 150px;
     border-radius: 19px 19px 0 0;
-    margin-top: -8px;
 
     .card-img-top {
         width: 100%;
@@ -46,6 +46,7 @@
 .card-top-section {
     display: flex;
     justify-content: space-between;
+    padding: 1rem 1rem !important;
 }
 
 .card-title {
@@ -63,8 +64,8 @@
 }
 
 .card-text {
-    padding-top: 10px !important;
-    max-height: 70px;
+    padding: 0 1rem !important;
+    max-height: 80px;
     position: relative;
     overflow: hidden;
     word-wrap: break-word;
@@ -72,13 +73,13 @@
 }
 
 .card-body {
-    padding: 0.5rem 1rem !important;
+    padding: 0!important;
     display: flex;
     flex-direction: column;
 }
 
 .card-read-more {
-    margin-top: 16px;
+    padding: 1rem;
     text-align: right;
     color: #51ACEA;
 
