--- a/static/css/style.css
+++ b/static/css/style.css
@@ -295,6 +295,7 @@ ul li:hover ul.dropdown-menu .menu-hr {
   border: solid 5px transparent;
   /* !importanté */
   border-radius: 1.5em;
+  padding: 0 !important;
 }
 .card-recipes:before {
   content: "";
@@ -314,7 +315,6 @@ ul li:hover ul.dropdown-menu .menu-hr {
   width: 100%;
   height: 150px;
   border-radius: 19px 19px 0 0;
-  margin-top: -8px;
 }
 .card-image .card-img-top {
   width: 100%;
@@ -325,6 +325,7 @@ ul li:hover ul.dropdown-menu .menu-hr {
 .card-top-section {
   display: flex;
   justify-content: space-between;
+  padding: 1rem 1rem !important;
 }
 
 .card-title {
@@ -340,8 +341,8 @@ ul li:hover ul.dropdown-menu .menu-hr {
 }
 
 .card-text {
-  padding-top: 10px !important;
-  max-height: 70px;
+  padding: 0 1rem !important;
+  max-height: 80px;
   position: relative;
   overflow: hidden;
   word-wrap: break-word;
@@ -349,13 +350,13 @@ ul li:hover ul.dropdown-menu .menu-hr {
 }
 
 .card-body {
-  padding: 0.5rem 1rem !important;
+  padding: 0 !important;
   display: flex;
   flex-direction: column;
 }
 
 .card-read-more {
-  margin-top: 16px;
+  padding: 1rem;
   text-align: right;
   color: #51ACEA;
 }
