--- a/static/css/style.css
+++ b/static/css/style.css
@@ -322,22 +322,10 @@ ul li:hover ul.dropdown-menu .menu-hr {
   border-radius: inherit;
 }
 
-.card-top-section {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem 1rem !important;
-}
-
-.card-title {
-  color: #FF3377;
-  font-size: 16px;
-}
-
 .card-fav-icon i {
   font-size: 18px;
   color: #FF3377;
   text-decoration: none;
-  padding-top: 8px;
 }
 
 .card-text {
@@ -354,9 +342,19 @@ ul li:hover ul.dropdown-menu .menu-hr {
   display: flex;
   flex-direction: column;
 }
+.card-body .card-title {
+  padding: 0 1rem !important;
+  color: #FF3377;
+  font-size: 16px;
+}
+
+.card-bottom-section {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 1rem !important;
+}
 
 .card-read-more {
-  padding: 1rem;
   text-align: right;
   color: #51ACEA;
 }
@@ -1001,6 +999,11 @@ form p {
   padding-top: 60px;
 }
 
+@media (max-width: 360px) {
+  .col-min-12 {
+    width: 225px;
+  }
+}
 @media screen and (min-height: 1000px) and (min-width: 1020px) {
   #recovery-page .main-container {
     height: calc(100% - 360px);
