Favourites icon hover style added

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -328,6 +328,17 @@ ul li:hover ul.dropdown-menu .menu-hr {
   text-decoration: none;
 }
 
+* > .fa-hover-show,
+*:hover > .fa-hover-hidden,
+*:focus > .fa-hover-hidden {
+  display: none;
+}
+
+*:focus > .fa-hover-show,
+*:hover > .fa-hover-show {
+  display: inline-block;
+}
+
 .card-text {
   padding: 0 1rem !important;
   max-height: 80px;
