--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -9,7 +9,7 @@
     <!-- card bottom section -->
     <p class="card-text">{{search_recipe_desc}}</p>
     <div class="card-bottom-section">
-        <a href="{{add_to_favourites}}" class="card-fav-icon"><i class="far fa-heart"></i></a>
+        <a href="{{add_to_favourites}}" class="card-fav-icon"><i class="far fa-heart fa-hover-hidden"></i><i class="fas fa-heart fa-hover-show"></i></a>
         <a href="{{url_for('this_recipe')}}" class="card-read-more">Read more</a>
     </div>
 </div>
