--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -3,26 +3,14 @@
 <!-- Include carousel -->
 {% include 'components/carousel/carousel.html' %}
 <div class="search-container">
-    <div class="search-box"></div>
+    <!-- Saerch input box and button -->
+    <div class="search-box">
 
-    <div class="col-min-12 col-md-3 col-sm-4 col-xs-6 card-recipes">
-        {% include 'components/cards/recipe-card.html' %}
     </div>
-    <div class="col-min-12 col-md-3 col-sm-4 col-xs-6 card-recipes">
+    <!-- Search result container -->
+    <div class="container card-results">
         {% include 'components/cards/recipe-card.html' %}
-    </div>
-    <div class="col-min-12 col-md-3 col-sm-4 col-xs-6 card-recipes">
-        {% include 'components/cards/recipe-card.html' %}
-    </div>
-    <div class="col-min-12 col-md-3 col-sm-4 col-xs-6 card-recipes">
-        {% include 'components/cards/recipe-card.html' %}
-    </div>
-    <div class="col-min-12 col-md-3 col-sm-4 col-xs-6 card-recipes">
-        {% include 'components/cards/recipe-card.html' %}
-    </div>
-    <div class="col-min-12 col-md-3 col-sm-4 col-xs-6 card-recipes">
-        {% include 'components/cards/recipe-card.html' %}
-    </div>
 
+    </div>
 </div>
 {% endblock %}
