--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -5,7 +5,20 @@
 <div class="search-container">
     <!-- Saerch input box and button -->
     <div class="search-box">
-
+        <form id="recipes-search" name="recipe-searchbox" action="{{url_for('recipes')}}" method="GET">
+            <div class="row">
+                <div class="col-xs-6 col-md-4">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" id="txtSearch" />
+                            <div class="input-group-btn">
+                            <button class="btn btn-primary" type="submit">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
     <!-- Search result container -->
     <div class="container card-results">
