--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1012,7 +1012,14 @@ form p {
 }
 
 .search-container {
-  padding-top: 60px;
+  padding-top: 40px;
+}
+
+.search-box {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  padding-bottom: 20px;
 }
 
 .card-results {
