--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -9,7 +9,7 @@
             <div class="input-group">
                  <input type="text" class="form-control" id="recipe-serach" name="search" placeholder="Search" required>
                 <div class="input-group-btn">
-                    <button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+                    <button class="btn main-button-2" type="submit"><span class="glyphicon glyphicon-search"></span></button>
                 </div>
             </div>
         </form>
