--- a/scss/page-styles/recipes.scss
+++ b/scss/page-styles/recipes.scss
@@ -2,6 +2,9 @@
     .container {
         padding: 0!important;
     }
+    .form-control{
+        border: 1px solid #FF3377;
+    }
 }
 
 .search-container {
