--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -4,15 +4,18 @@
 {% include 'components/carousel/carousel.html' %}
 <div class="search-container">
     <!-- Saerch input box and button -->
-    <div class="search-box">
-        <form id="recipes-search" name="recipe-searchbox" action="{{url_for('recipes')}}" method="POST">
-            <div class="input-group">
-                 <input type="text" class="form-control" id="recipe-serach" name="search" placeholder="Search" required>
-                <div class="input-group-btn">
-                    <button class="btn main-button-2" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+    <div class="container search-box">
+        <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+            <p class="contact-text search-weight">Use our magnificent search engine to find thousands of great recipes.</p>
+            <form id="recipes-search" name="recipe-searchbox" action="{{url_for('recipes')}}" method="POST">
+                <div class="input-group">
+                    <input type="text" class="form-control" id="recipe-serach" name="search" placeholder="Search" required>
+                    <div class="input-group-btn">
+                        <button class="btn main-button-2" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
     <!-- Search result container -->
     <div class="container card-results">
