--- a/scss/page-styles/recipes.scss
+++ b/scss/page-styles/recipes.scss
@@ -2,8 +2,13 @@
     .container {
         padding: 0!important;
     }
-    .form-control{
+    .form-control {
         border: 1px solid #FF3377;
+    }
+    .input-group {
+        box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+        -webkit-box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.05), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
     }
 }
 
@@ -15,15 +20,23 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    padding-bottom: 20px;
+
+    div {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+.search-weight {
+    font-weight: 400;
 }
 
 .card-results {
+    margin-top: 40px;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
 }
-
 
 @media (max-width: 460px) {
     .col-min-12 {
