Recipe id add in hidden heading tag

--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -6,11 +6,12 @@
             <img class="card-img-top" src="{{search_recipe_img}}" alt="{{saerch_recipe_title}}">
         </div>
         <!-- card top section -->
+        <h2 class="hidden">{{recipe_id}}</h2>
         <h5 class="card-title">{{saerch_recipe_title}}</h5>
         <!-- card bottom section -->
         <p class="card-text">{{search_recipe_desc}}</p>
         <div class="card-bottom-section">
-            <a href="{{add_to_favourites}}" class="card-fav-icon"><i class="far fa-heart fa-hover-hidden"></i><i class="fas fa-heart fa-hover-show"></i></a>
+            <a href="{{url_for('add_to_favourites')}}" class="card-fav-icon"><i class="far fa-heart fa-hover-hidden"></i><i class="fas fa-heart fa-hover-show"></i></a>
             <a href="{{url_for('this_recipe')}}" class="card-read-more">Read more</a>
         </div>
     </div>
