Recipe id added

--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -6,7 +6,7 @@
             <img class="card-img-top" src="{{search_recipe_img}}" alt="{{saerch_recipe_title}}">
         </div>
         <!-- card top section -->
-        <h2 class="hidden">{{recipe_id}}</h2>
+        <h2 class="hidden">{{search_recipe_id}}</h2>
         <h5 class="card-title">{{saerch_recipe_title}}</h5>
         <!-- card bottom section -->
         <p class="card-text">{{search_recipe_desc}}</p>
