--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,3 +33,4 @@
 @import 'page-styles/user-menu.scss';
 @import 'page-styles/user-menu-blocks.scss';
 @import 'page-styles/error-page.scss';
+@import 'page-styles/add-recipe.scss';
