--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -2,4 +2,6 @@
 <div class="container">
     <h1 class="hidden">Add Recpie</h1>
 </div>
+    <h3 class="page-title">New Recipe</h3>
+
 {% endblock %}
