Main recipe fields style applied

--- a/templates/pages/account.html
+++ b/templates/pages/account.html
@@ -3,7 +3,7 @@
     <h1 class="hidden">User menu</h1>
     <!-- welcme text -->
     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6 xSmall">
-        <h4 class="welcome-lead">Account Details</h4>
+        <h4 class="welcome-lead">Account details</h4>
         <div class="details-list">
             <div class="user-info">
                 <h4 class="info-label">Name</h4>
