--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -1,9 +1,50 @@
 #new-recipe-page {
     padding-top: 60px;
+    .lead {
+        font-size: 14px;
+    }
 }
 
-.form-row {}
+.new-recipe-container {
+    margin-top: 30px;
+}
 
+.form-row {
+    display: flex;
+    margin-bottom: 15px;
+
+    .form-control {
+        margin-top: -8px;
+        padding: 2px 10px;
+    }
+
+    .time-text {
+        width: 40px;
+        text-align: center;
+    }
+
+    label {
+        font-size: 14px;
+        min-width: 100px;
+        margin-right: 10px;
+    }
+}
+
+.prepare-time {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    small {
+        width: 100%;
+        margin-left: 10px;
+    }
+}
+
+.ingridients {
+    display: flex;
+    justify-content: space-evenly;
+}
 
 .additional-tip {
     display: flex;
