--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1308,6 +1308,46 @@ form p {
 #new-recipe-page {
   padding-top: 60px;
 }
+#new-recipe-page .lead {
+  font-size: 14px;
+}
+
+.new-recipe-container {
+  margin-top: 30px;
+}
+
+.form-row {
+  display: flex;
+  margin-bottom: 15px;
+}
+.form-row .form-control {
+  margin-top: -8px;
+  padding: 2px 10px;
+}
+.form-row .time-text {
+  width: 40px;
+  text-align: center;
+}
+.form-row label {
+  font-size: 14px;
+  min-width: 100px;
+  margin-right: 10px;
+}
+
+.prepare-time {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.prepare-time small {
+  width: 100%;
+  margin-left: 10px;
+}
+
+.ingridients {
+  display: flex;
+  justify-content: space-evenly;
+}
 
 .additional-tip {
   display: flex;
