--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -3,22 +3,27 @@
     <h1 class="hidden">Add Recpie</h1>
 </div>
 <div class="container">
-    <h3 class="page-title">New Recipe</h3>
+    <h3 class="page-title">Add new recipe</h3>
     <p class="lead"><strong>How to create a new recipe in few easy steps?</strong></br>Find the right name for your recipe, add ingridnets with their weight.</br>Write every step by step preparation process, don't forgot to add some tips to make it even esaier to prepare.</p>
     <div class="new-recipe-container">
         <form id="new-recipe-form" name="new-recipe-form" action="{{ url_for('add_recipe') }}" method="POST">
             <div class="container">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-lg-6 recipe-details">
                     <div class="form-row">
-                        <label for="" class="">Title</label>
+                        <label class="">Title</label>
                         <input type="text" class="form-control" id="preparing-title" name="preparing-title" placeholder="Chocolate Cake" required>
                     </div>
                     <div class="form-row">
-                        <label for="" class="">Preparing Time</label>
-                        <input type="text" class="form-control" id="preparing-time" name="preparing-time" placeholder="2h 32min" required>
+                        <label>Preparing Time</label>
+                        <div class="prepare-time">
+                            <input type="text" class="form-control time-text" id="preparing-time-hrs" name="preparing-time-hrs" placeholder="2" maxlength="2"required>
+                            <small class="">hrs</small>
+                            <input type="text" class="form-control time-text" id="preparing-time-min" name="preparing-time-min" placeholder="32" maxlength="2"required>
+                            <small class="">min</small>
+                        </div>
                     </div>
                     <div class="form-row">
-                        <label for="" class="">Difficulty</label>
+                        <label class="">Difficulty</label>
                         <select class="form-control form-control-lg">
                             <option select>Choose level</option>
                             <option>Easy</option>
@@ -27,30 +32,30 @@
                         </select>
                     </div>
                     <div id="ingridient-container" class="form-row">
-                        <label for="" class="">Ingirients</label>
-                        <div id="ingridients">
-                            <div class="ingridient">
-                                <input type="text" class="form-control" id="preparing-time" name="preparing-time" placeholder="Ingridient name" required>
-                                <input type="text" class="form-control" id="preparing-time" name="preparing-time" placeholder="" required>
-                            </div>
-                        </div>
-                        <button class="appendIngridient" type="button">+ Add Ingridient</button>
+                        <label class="">Ingridients List:</label>
                     </div>
+                    <div id="ingridients">
+                        <div class="ingridient">
+                            <input type="text" class="form-control" id="ingridient-name" name="ingridient-name" placeholder="Ingridient name" required>
+                            <input type="text" class="form-control" id="ingridient-scale" name="ingridient-scale" placeholder="g,kg,l,ml etc." required>
+                        </div>
+                    </div>
+                    <button class="appendIngridient" type="button">+ Add Ingridient</button>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-lg-6 recipe-preparation">
                     <div class="form-row">
-                        <label for="" class="">Preparation Steps</label>
+                        <label class="">Preparation Steps</label>
                         <div class="step-container">
-                            <label id="prepration-label" class="">Preparation Steps</label>
-                            <textarea class="form-control" rows="2" id="preparation-step"></textarea>
+                            <input type="text" class="form-control" id="tip-info-label" name="preparing-time" placeholder="Tip title" required>
+                            <textarea class="form-control" rows="2" id="preparation-step" placeholder="Step explanation"required></textarea>
                         </div>
                         <button class="appendStep" type="button">+ Add Step</button>
                     </div>
                     <div class="form-row">
-                        <label for="" class="">Additional Tips</label>
+                        <label class="">Additional Tips</label>
                         <div class="additional-tip">
-                            <input type="text" class="form-control" id="tip-info-label" name="preparing-time" placeholder="2h 32min" required>
-                            <textarea class="form-control" rows="5" id="tip-info"></textarea>
+                            <input type="text" class="form-control" id="tip-info-label" name="preparing-time" placeholder="Tip title">
+                            <textarea class="form-control" rows="5" id="tip-info" placeholder="Tip explanation"></textarea>
                         </div>
                         <button class="appendTip" type="button">+ Add Tip</button>
                     </div>
@@ -59,5 +64,4 @@
         </form>
     </div>
 </div>
-
 {% endblock %}
