--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -38,26 +38,27 @@
                         <div class="ingridient">
                             <input type="text" class="form-control" id="ingridient-name" name="ingridient-name" placeholder="Ingridient name" required>
                             <input type="text" class="form-control" id="ingridient-scale" name="ingridient-scale" placeholder="g,kg,l,ml etc." required>
+                            <button class="removeIngridient btn main-button" type="button">x</button>
                         </div>
                     </div>
-                    <button class="appendIngridient" type="button">+ Add Ingridient</button>
+                    <button class="appendIngridient btn main-button" type="button">+ Add Ingridient</button>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-lg-6 recipe-preparation">
                     <div class="form-row">
-                        <label class="">Preparation Steps</label>
+                        <label class="">Preparation Steps:</label>
                         <div class="step-container">
-                            <input type="text" class="form-control" id="tip-info-label" name="preparing-time" placeholder="Tip title" required>
+                            <label class="">Step 1</label>
                             <textarea class="form-control" rows="2" id="preparation-step" placeholder="Step explanation"required></textarea>
                         </div>
-                        <button class="appendStep" type="button">+ Add Step</button>
+                        <button class="appendStep btn main-button" type="button">+ Add Step</button>
                     </div>
                     <div class="form-row">
-                        <label class="">Additional Tips</label>
+                        <label class="">Additional Tips:</label>
                         <div class="additional-tip">
                             <input type="text" class="form-control" id="tip-info-label" name="preparing-time" placeholder="Tip title">
                             <textarea class="form-control" rows="5" id="tip-info" placeholder="Tip explanation"></textarea>
                         </div>
-                        <button class="appendTip" type="button">+ Add Tip</button>
+                        <button class="appendTip btn main-button" type="button">+ Add Tip</button>
                     </div>
                 </div>
             </div>
