--- a/templates/pages/add-recipe.html
+++ b/templates/pages/add-recipe.html
@@ -46,10 +46,11 @@
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-lg-6 recipe-preparation">
                     <div class="form-row">
                         <label class="">Preparation Steps:</label>
-                        <div id="step-container" class="step-container">
+                        <div id="steps" class="step-container">
                             <div class="step">
-                                <label class="">Step {{step_count}}</label>
+                                <label class="step">Step 1</label>
                                 <textarea class="form-control" rows="2" id="preparation-step" placeholder="Step explanation" required></textarea>
+                                <button class="removeStep btn main-button-small" type="button">x</button>
                             </div>
                         </div>
                         <button class="appendStep btn main-button-small" type="button">+ Add Step</button>
