--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -16,7 +16,6 @@
 .form-row {
     display: flex;
     margin-bottom: 20px;
-
     .form-control {
         margin-top: -8px;
         padding: 2px 10px;
@@ -65,9 +64,39 @@
     }
 }
 
-.additional-tip {
+.steps-container {
+    width: 100%;
+}
+
+.step {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    .main-button-small {
+        width: 30px;
+        padding: 0px 0px;
+    }
+    .form-control {
+        margin-bottom: 15px;
+    }
+}
+
+.top-step {
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.tip {
+    width: 100%;
+    display: flex;
+    .main-button-small {
+        width: 40px;
+    }
+    .form-control {
+        margin-bottom: 15px;
+    }
 }
 
 .main-button-small {
