--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1365,9 +1365,39 @@ form p {
   width: 40px;
 }
 
-.additional-tip {
+.steps-container {
+  width: 100%;
+}
+
+.step {
+  width: 100%;
   display: flex;
   flex-direction: column;
+}
+.step .main-button-small {
+  width: 30px;
+  padding: 0px 0px;
+}
+.step .form-control {
+  margin-bottom: 15px;
+}
+
+.top-step {
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.tip {
+  width: 100%;
+  display: flex;
+}
+.tip .main-button-small {
+  width: 40px;
+}
+.tip .form-control {
+  margin-bottom: 15px;
 }
 
 .main-button-small {
